@@ -9,7 +9,7 @@ Version 2.18.1
 
 * The following bugs are resolved with this release:
 
-  15128, 15909, 15996, 16150.
+  15073, 15128, 15909, 15996, 16150.
 
 Version 2.18
 
